src/objects/BMCServiceDesk__SRM_FulfillmentMappings__c.object
<CustomObject>
    <description>Stores the mapping between an input question and the field of a selected process. The response for the input question is stored in the mapped field of the process.</description>
    <fields>
        <fullName>BMCServiceDesk__FKFulfillmentInputs__c</fullName>
        <label>Fulfillment Input</label>
        <referenceTo>BMCServiceDesk__SRM_FulfillmentInputs__c</referenceTo>
        <relationshipLabel>Fulfillment Mappings</relationshipLabel>
        <relationshipName>Fulfillment_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProcessTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Template</label>
        <referenceTo>BMCServiceDesk__SRM_ProcessTemplate__c</referenceTo>
        <relationshipLabel>Fulfillment Mappings</relationshipLabel>
        <relationshipName>Fulfillment_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Fulfillment Mappings</relationshipLabel>
        <relationshipName>Fulfillment_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProcessVariable__c</fullName>
        <label>Process variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fulfillment Mapping</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>